syntax = "proto3";
package proto;

message ConnectRequest {
  string Host = 1;
  int32 Type = 2;
  int32 Port = 3;
  bool X11 = 4;
  int64 Timestamp = 5;
  int32 ProxyPort = 6;
}

message ConnectResponse {
  string Host = 1;
}

message ProxyInfo {
  string Host = 1;
  int32 Type = 2;
  int32 Port = 3;
  bool X11 = 4;
  int32 ProxyPort = 5;
  int32 Status = 6;
  int64 StartTime = 7;
  int32 ConnectionNumber = 8;
}

message DestroyProxRequest {
 repeated string Host = 1;
}

message DestroyProxResponse {
  string Error = 1;
  repeated ProxyInfo Info = 2;
}

message ListDestroyReqeust {
  repeated ProxyInfo Proxies = 1;
}

message ListDestroyResponse {
  repeated ProxyInfo List = 1;
}